# azure-foundry-architect-framework

./: .env.example  .gitattributes  .gitignore  README.md  check_status.py  compose.local.yml  compose.yml  monitor_analysis.py  pyproject.toml  sonar-project.properties  test_performance_analysis.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/ArchitectureDiagram/: ArchitectureDiagram.tsx
client/src/components/Dashboard/: Layout.tsx
client/src/pages/: AnalysisPage.tsx  ArchitecturePage.tsx  HistoryPage.tsx  HomePage.tsx  PerformancePage.tsx  PerformanceReportPage.tsx  QualityPage.tsx  ReportPage.tsx
client/src/services/: api.ts  mockApi.ts  mockData.ts
docker/: Dockerfile.api  Dockerfile.client  Dockerfile.mcp-azure  Dockerfile.mcp-devops  nginx.conf
docs/: Azure_Foundry_Architect_Framework_Documentation_v1.0.docx  Azure_Foundry_Architect_Framework_Documentation_v1.1.docx  Efesto_AI_Fabryc_Documentation_v1.2.docx  MinIo_GitClone_Vol.md  architecture.dot  architecture.drawio
infra/: main.bicep
infra/modules/: ai-foundry.bicep  ai-search.bicep  container-apps-env.bicep  container-apps.bicep  cosmosdb.bicep  keyvault.bicep  mongodb.bicep  monitoring.bicep  networking.bicep  openai.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
scripts/: deploy.sh  generate_docs.py  setup-rbac.sh  start_local.bat  start_local.sh
src/agents/: __init__.py  base_agent.py  code_analyzer.py  cost_optimizer.py  gap_analyzer.py  infra_analyzer.py  mcp_enrichment_agent.py  mcp_helpers.py  migration_planner.py  orchestrator.py  performance_architect.py  performance_coder.py  performance_optimizer.py  performance_orchestrator.py  performance_validator.py  quality_analyzer.py  waf_reviewer.py
src/api/: main.py
src/api/models/: requests.py  responses.py
src/api/routes/: analysis.py  artifacts.py  performance.py
src/cache/: redis_cache.py
src/config/: settings.py
src/config/prompts/: code_analyzer.yaml  cost_optimizer.yaml  gap_analyzer.yaml  infra_analyzer.yaml  mcp_enrichment.yaml  mcp_enrichment_agent.yaml  migration_planner.yaml  orchestrator.yaml  performance_architect.yaml  performance_coder.yaml  performance_optimizer.yaml  performance_validator.yaml  quality_analyzer.yaml  waf_reviewer.yaml
src/tools/: __init__.py  blob_storage.py  code_scanner.py  git_importer.py  infra_parser.py  pricing_calculator.py  sonarcloud_client.py  volume_reader.py
